--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-joblib==1.4.0
-numpy==1.26.4
-pandas==2.2.2
-pillow==10.3.0
-scikit-learn==1.4.2
-wfdb==4.1.2
+joblib
+numpy
+pandas
+pillow
+scikit-learn
+wfdb
+torch
