--- a/requirements.txt
+++ b/requirements.txt
@@ -1,129 +1,8 @@
-absl-py==2.1.0
-astunparse==1.6.3
-beautifulsoup4==4.12.2
-blis==0.7.11
-cachetools==5.4.0
-catalogue==2.0.10
-certifi==2024.7.4
-cffi==1.17.0
-chardet==3.0.4
-charset-normalizer==3.3.2
-click==8.1.7
-contourpy==1.2.1
-cycler==0.12.1
-cymem==2.0.8
-decorator==5.1.1
-docker-pycreds==0.4.0
-filelock==3.15.4
-flatbuffers==24.3.25
-fonttools==4.53.1
-fsspec==2024.6.1
-gast==0.6.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-auth==2.33.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.65.5
-h5py==3.11.0
-html5lib==1.1
-idna==2.8
-imageio==2.27.0
-imgaug==0.4.0
-imutils==0.5.4
-Jinja2==3.1.4
-joblib==1.3.2
-keras==2.14.0
-kiwisolver==1.4.5
-langcodes==3.4.0
-language_data==1.2.0
-lazy_loader==0.4
-libclang==18.1.1
-marisa-trie==1.2.0
-Markdown==3.7
-MarkupSafe==2.1.5
-matplotlib==3.9.2
-ml-dtypes==0.2.0
-mpmath==1.3.0
-murmurhash==1.0.10
-networkx==3.3
-numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.6.20
-nvidia-nvtx-cu12==12.1.105
-oauthlib==3.2.2
-opencv-python==4.6.0.66
-opt-einsum==3.3.0
-packaging==24.1
-pandas==2.2.2
-pathlib_abc==0.1.1
-pathy==0.11.0
-pillow==10.3.0
-platformdirs==4.2.2
-preshed==3.0.9
-protobuf==4.25.4
-psutil==6.0.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.22
-pydantic==1.8.2
-pyparsing==3.1.2
-pypng==0.20220715.0
-python-dateutil==2.9.0.post0
-pytz==2024.1
-PyWavelets==1.7.0
-PyYAML==6.0.2
-qrcode==7.4.2
-requests==2.21.0
-requests-oauthlib==2.0.0
-rsa==4.9
-scikit-image==0.21.0
-scikit-learn==1.4.2
-scipy==1.14.0
-seaborn==0.12.2
-sentry-sdk==2.13.0
-setproctitle==1.3.3
-shapely==2.0.5
-six==1.16.0
-smart-open==6.4.0
-smmap==5.0.1
-soundfile==0.12.1
-soupsieve==2.6
-spacy==3.2.6
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
-sympy==1.13.2
-tensorboard==2.14.1
-tensorboard-data-server==0.7.2
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==2.4.0
-thinc==8.0.17
-threadpoolctl==3.5.0
-tifffile==2024.8.10
-torch==2.4.0
-torchvision==0.19.0
-tqdm==4.66.5
-triton==3.0.0
-typer==0.4.2
-typing_extensions==4.5.0
-tzdata==2024.1
-urllib3==1.24.3
-validators==0.18.2
-wandb==0.17.7
-wasabi==0.10.1
-webencodings==0.5.1
-Werkzeug==3.0.3
-wfdb==4.1.2
-wrapt==1.14.1
+joblib
+numpy
+pandas
+pillow
+scikit-learn
+wfdb
+torch
+torchvision
